[tool.poetry]
name = "tectonix-site"
version = "0.2.0"
description = ""
authors = ["DJ Stomp"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.0.3"
pyScss = "1.3.7"
Flask-Scss = "^0.5"
Flask-Assets = "^2.0"
Flask-Mobility = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"